[#46402] Reword tooltip and relabel mass handling button + ensure proper responsive styling when table controls wrap across multiple lines.

--- a/src/os2datascanner/projects/report/reportapp/static/src/css/components/_datatable.scss
+++ b/src/os2datascanner/projects/report/reportapp/static/src/css/components/_datatable.scss
@@ -238,7 +238,13 @@
     border-top: 1px solid rgba(0, 0, 0, 0.2);
     background-color: #f4f4f4;
     white-space: nowrap;
-    top: calc(2rem + var(--size-logo-height) + 6rem); // for sticky purposes; header height + 6rem
+    top: calc(2rem + var(--size-logo-height) + 12rem); // for sticky purposes; header height + row height of 9rem  
+    @media (min-width: $break-sm) {
+      top: calc(2rem + var(--size-logo-height) + 9rem); // for sticky purposes; header height + row height of 9rem
+    }
+    @media (min-width: $break-md) {
+      top: calc(2rem + var(--size-logo-height) + 6rem); // for sticky purposes; header height + row height of 6rem
+    }
     @media (min-width: $break-lg) {
       top: 6rem; // for sticky purposes
     }
